# research

./: .gitignore  download_data.py  pyproject.toml
ee/20250407_ee_class/: main_fix_class.py  main_fix_data.py  main_tmp.py
ee/20250407_ee_class/exp_fix_class/: analyze.ipynb  results.csv
ee/20250507_mn_compare/exp_opt/: analyze.ipynb
ee/20250519_vmap/: main_compare.py  main_tmp.py
ee/20250519_vmap/exp_tmp/: results.csv
ee/20250602_path/exp_compare/: mn_adam.csv  mn_sgd.csv  results.csv  results.parquet
ee/20250602_path/exp_sgd_long/: analyze.ipynb  results.csv
ee/20250602_path/exp_sgd_lr/: analyze.ipynb  analyze_font.ipynb  app.py  results.csv  results.parquet
ee/20250602_path/exp_tmp/: analyze.ipynb  results.csv  results.parquet
ee/20250612_wd/: main.py
ee/20250612_wd/exp_sgd_wd/: _results.csv  _results.parquet  analyze copy.ipynb  analyze.ipynb  tmp.ipynb
ee/20250612_wd/exp_tmp/: _results.csv  _results.parquet
ee/20250612_wd/exp_waaaa/: results.csv  results.parquet
ee/20250710_opt/: analyze_cat.ipynb  analyze_cat_4090.ipynb  main.py  main_4090.py
ee/20250710_opt/exp_sgd_wd/: _results.csv  _results.parquet  analyze.ipynb
ee/20250710_opt/exp_sgd_wd_4090/: _results.csv  _results.parquet
ee/20250710_opt_comp/: main.py
ee/20250717_opt_re/: analyze_cat.ipynb  analyze_cat_4090.ipynb  analyze_cat_grad.ipynb  graph.ipynb  graph_stat.ipynb  main.py
ee/20250717_opt_re/exp_opt/: _results.csv  _results.parquet
ee/20250717_opt_re/exp_opt_4090/: _results.csv  _results.parquet
ee/20250802_ca/: analyze.ipynb  excute_all.py  graph_stat.ipynb  graph_stat_paper copy.ipynb  graph_stat_paper.ipynb  main_p1.py  main_p3.py  main_p4.py
ee/20250802_ca/exp_opt/: _results.csv  _results.parquet
ee/20250802_ca/exp_opt_4090/: _results.csv
ee/20250802_ce/: graph_stat.ipynb  main.py  main_4090.py
ee/20250802_ce/exp_opt/: _results.csv  _results.parquet
ee/20250802_ce/exp_opt_4090/: _results.parquet  analyze.ipynb
ee/20250819_moment/exp_gzgz/: _results.csv  _results.parquet
ee/20250819_moment/exp_tmp/: _results.csv  _results.parquet
ee/20250819_test/: graph_stat.ipynb
ee/20250823_moment_re/: graph_stat.ipynb
ee/20250823_moment_re/exp_gzgz/: _results.parquet
ee/20250823_moment_re/exp_tmp/: _results.csv
ee/20250902_dist_fail/: graph.ipynb
ee/20250902_dist_fail/exp_dist/: analyze.ipynb
ee/20250904_dist/: graph.ipynb  tmp.csv
ee/20251007_debug/: main.py
ee/20251007_debug/exp_new/: _results.parquet
ee/20251007_debug/exp_old/: _results.parquet
ee/20251007_debug/exp_old_b/: _results.csv  _results.parquet
ee/20251008_sgd_lr/exp_sgd_lr/: _results.csv
ee/20251020_sync_dbg/: graph_stat.ipynb
ee/20251021_ds_renew/: tmp.ipynb
ee/ee_tools/: ee_convert_old.py  ee_refiner.py  ee_trainer.py
ee/ee_tools copy/: ee_trainer.py
ee/hase_ee/: ensemble_multinarrow.py
others/: competition.ipynb  predictions.csv  tmp.ipynb
others/basic_studies/: tmp.ipynb
others/comp/: predictions.csv
others/competition/: competition.ipynb  predictions.csv
others/exp_comp/: results.csv  results.parquet
wandb/: latest-run
(+38096 files in other folders)
